--- a/packages/app/functions/package.json
+++ b/packages/app/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
