--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.14.5",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
+    "node-fetch": "^2.6.0",
     "prompt": "^1.0.0",
     "uuidv4": "^6.0.9",
     "yargs": "^15.3.1"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/inquirer": "^6.5.0",
+    "@types/node-fetch": "^2.5.7",
     "@types/uuidv4": "^5.0.0",
     "@types/yargs": "^15.0.5"
   }
