fix firebase deploy

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start:emulators": "firebase emulators:start",
+    "deploy": "firebase deploy",
     "deploy:functions": "firebase deploy --only functions",
     "prestart": "ensure-localhost",
     "start": "react-scripts start",
