--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -9,10 +9,27 @@
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
   },
+
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
+      {
+        "source": "/getItem",
+        "function": "getItem"
+      },
+      {
+        "source": "/setItem",
+        "function": "setItem"
+      },
+      {
+        "source": "/getStorages",
+        "function": "getStorages"
+      },
+      {
+        "source": "/createStorage",
+        "function": "createStorage"
+      },
       {
         "source": "**",
         "destination": "/index.html"
