--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.5.0",
     "@types/node-fetch": "^2.5.7"
   }
 }
