--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ HOST=cloud-local-storage-local
 REACT_APP_HOST=cloud-local-storage-local
 FIRESTORE_EMULATOR_HOST=localhost:8090
 PORT=3080
+__CLOUD_LOCAL_STORAGE_DEV__=true
