--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -7,6 +7,11 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dutzi/cloud-local-storage.git",
+    "directory": "packages/node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
