--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "classnames": "^2.2.6",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "sass": "^1.65.1",
     "typescript": "^4.3.4",
     "uuid-token-generator": "^1.0.0"
   },
